# einsteinpy

./: .codeclimate.yml  .coveragearc  .gitignore  .gitmodules  .isort.cfg  .pep8speaks.yml  .rtd-environment.yml  .travis.yml  AUTHORS  CHANGELOG  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  COPYING  ISSUE_TEMPLATE.md  LaunchingPad  MANIFEST.in  README.rst  appveyor.yml  codecov.yml  index.ipynb  mypy.ini  pull_request_template.md  pyproject.toml  readthedocs.yml  requirements.py  setup.cfg  setup.py  testing.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  auto_assign.yml  codecov.yml  no-response.yml  pull_request_template.md  wip.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  good-wishes-.md  maintainers.md
.github/workflows/: assignbot.yml  pythonpackage.yml  quality_check.yml
.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  random.data.json  random.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  warnings.data.json  warnings.meta.json
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/einsteinpy/: __init__.data.json  __init__.meta.json  constant.data.json  constant.meta.json  testing.data.json  testing.meta.json  units.data.json  units.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.6/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.6/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
core/: __init__.py  conftest.py  example_mod.py
core/data/: README.rst
core/example_subpkg/: setup_package.py
core/tests/: setup_package.py  test_example.py
core/utils/: __init__.py
docs/: Makefile  conf.py  index.rst
docs/core/: index.rst
docs/source/: .~lock.codeofconduct.rst#  Getting_started.rst  changelog.rst  codeofconduct.rst  conf.py  dev_guide.rst  form.rst  getting_started.rst  gr_primer.rst  index.rst  installation.rst  jupyter.rst  metric.rst  user_guide.rst
docs/source/_static/: .anim.gif.icloud  .logo_HD.png.icloud  custom.css  override.css
docs/source/api/: bodies.rst  constant.rst  examples.rst  geodesic.rst  index.rst  units.rst
docs/source/examples/: .Using Geodesics (Back-ends & Plotting).ipynb.icloud  Analysing Earth using EinsteinPy!.ipynb  Analysing_Earth_using_EinsteinPy!.ipynb  Animations in EinsteinPy.ipynb  Animations_in_EinsteinPy.ipynb  Auto_and_Manual_scaling_of_attractor_radius_with_Color.ipynb  Einstein Tensor symbolic calculation.ipynb  Einstein_Tensor_symbolic_calculation.ipynb  Lambdify symbolic calculation.ipynb  Lambdify_symbolic_calculation.ipynb  OPTSpacetime.ipynb  PNexpansion.ipynb  Playing with Contravariant and Covariant Indices in Tensors (Symbolic).ipynb  Playing with Contravariant and Covariant Indices in Tensors(Symbolic).ipynb  Playing_with_Contravariant_and Covariant_Indices_in_Tensors(Symbolic).ipynb  Playing_with_Contravariant_and_Covariant_Indices_in_Tensors(Symbolic).ipynb  Plotting Spatial Hypersurface Embedding for Schwarzschild Spacetime.ipynb  Plotting spacial hypersurface embedding for schwarzschild spacetime.ipynb  Plotting_spacial_hypersurface_embedding_for_schwarzschild_spacetime.ipynb  Predefined Metrics in Symbolic Module.ipynb  Reissner-Nordström metric.ipynb  Ricci Tensor and Scalar Curvature symbolic calculation.ipynb  Shadow cast by a thin emission disk around a Schwarzschild black hole.ipynb  Shadow cast by an thin emission disk around a black hole.ipynb  Simulating_orbit_of_a_test_particle_in_Schwarzschild_space-time.ipynb  Spacetime.ipynb  Symbolic Module - Einstein Tensor.ipynb  Symbolic Module - Lambdify.ipynb  Symbolic Module - Predefined Metrics.ipynb  Symbolic Module - Ricci Tensor and Scalar Curvature.ipynb  Symbolic Module - Tensor Indexing.ipynb  Symbolic Module - Weyl Tensor.ipynb  Symbolically Understanding Christoffel Symbol and Riemann Curvature Tensor using EinsteinPy.ipynb  Symbolically Understanding Christoffel Symbol and Riemann Metric Tensor using EinsteinPy.ipynb  Symbolically_Understanding_Christoffel_Symbol_and_Riemann_Curvature_Tensor_using_EinsteinPy.ipynb  User Defined Metrics.ipynb  Visualizing Event Horizon and Ergosphere (Singularities) of Kerr Metric or Black Hole.ipynb  Visualizing Frame Dragging in Kerr Spacetime using EinsteinPy!.ipynb  Visualizing Frame Dragging in Kerr Spacetime.ipynb  (+11 more)
docs/source/theory/: classical.rst  (+5 more)
licenses/: LICENSE.rst
src/: demo_simulation.py  photon.py
src/einsteinpy/: __init__.py  assignbot.test  bodies.py  constant.py  examples.py  geodesic.py  ijit.py  metric.py  radiative.py  radiative_transfer.py  testing.py  units.py  utils.py
src/tests/: test.py
tests/: test_bodies.py  test_examples.py  test_geodesics.py  test_units.py
tests/test_coordinates/: test_conversions.py  test_coord_transform.py  test_diff_transform.py  test_utils.py  test_velocity_transform.py
tests/test_geodesic/: test_geodesic.py  test_geodesic_utils.py  test_mock_julia.py  test_null_geodesics.py
tests/test_ijit/: test_ijit.py  test_ijit_without_numba.py
tests/test_integrators/: test_geod_int.py
tests/test_metric/: test_base_metric.py  test_generic_metric.py  test_kerr.py  test_kerrnewman.py  test_metric.py  test_schwarzschild.py
tests/test_misc/: test_dual.py
tests/test_plotting/: test_hypersurface.py
tests/test_symbolic/: test_christoffel.py  test_einstein.py  test_helpers.py  test_ricci.py  test_riemann.py  test_schouten.py  test_tensor.py  test_vacuum_metrics.py  test_weyl.py
tests/test_utils/: test_dual.py  test_exceptions.py  test_kerr_utils.py  test_scalar_factor.py  test_schwarzschild_utils.py
(+286 files in other folders)
