[metadata]
name = einsteinpy
version = 0.2.dev0
author = Shreyas Bapat
author_email = bapat.shreyas@gmail.com
license = MIT
description = Python package for General Relativity
keywords = 
    general relativity
    geodesics
    relativity
    kerr
    black-hole
    kerr-newman
    schwarzschild
url = https://einsteinpy.org/
download_url = https://github.com/einsteinpy/einsteinpy
long_description = file: README.rst
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Physics
        Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
        numpy
        astropy
        matplotlib
        scipy>=1.0
        plotly>=3.0,<4.*
include_package_data = True
python_requires = >=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    einsteinpy = einsteinpy.cli:main

[options.extras_require]
dev = 
        sympy>=1.1
        numba>=0.39 ; implementation_name=="cpython"
        black ; python_version>="3.6"
        coverage
        isort
        pytest
        pytest-xdist
        pytest-cov<2.6.0
        pycodestyle
        sphinx
        alabaster
        nbsphinx
        ipython>=5.0
        jupyter-client
        ipykernel
        ipywidgets

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings

[pycodestyle]
ignore = E731,W504
max-line-length = 120

[flake8]
ignore = E731,W504,F401,F841
max-line-length = 120
