[metadata]
name = einsteinpy
version = 0.5.dev0
author = Shreyas Bapat
author_email = bapat.shreyas@gmail.com
license = MIT
description = Python package for General Relativity
keywords =
    general relativity
    numerical relativity
    symbolic relativity
    relativity
    geodesics
    black-hole
    kerr
    kerr-newman
    schwarzschild
url = https://einsteinpy.org/
download_url = https://github.com/einsteinpy/einsteinpy
long_description = file: README.rst
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Physics
        Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
        numpy>=1.23.4
        astropy>=5.1.1
        matplotlib>=3.6.2
        scipy>=1.9.3
        plotly>=5.11.0
        sympy>=1.11.1
        numba>=0.56.3,!=0.49.0 ; implementation_name=='cpython'
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
        black>=22.10.0 ; python_version>="3.6"
        coverage>=6.5.0
        isort>=5.10.1
        pytest>=7.2.0
        pytest-xdist>=3.0.2
        pytest-cov>=4.0.0
        pycodestyle>=2.9.1
        sphinx>=5.3.0
        alabaster>=0.7.12
        nbsphinx>=0.8.9
        ipython>=8.6.0
        jupyter-client>=7.4.4
        ipykernel>=6.17.0
        ipywidgets>=8.0.2
        tox>=3.27.0
        jupyter_sphinx>=0.4

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
